cmake_minimum_required(VERSION 3.26)
project(TP3 C)

set(CMAKE_C_STANDARD 11)

add_executable(EXO1 exo1.c)
add_executable(EXO2 exo2.c)
add_executable(EXO3 exo3.c)
add_executable(EXO4 exo4.c)
add_executable(EXO5 exo5.c)
add_executable(EXO6 exo6.c)
add_executable(EXO7 exo7.c)
add_executable(EXO8 exo8.c)
add_executable(EXO9 exo9.c)
add_executable(EXO10 exo10.c)